# iNatDataPipeline

./: .gitignore  LICENSE  Makefile  README.md  config.ini  inat.db  pyproject.toml  requirements.txt
data/: inat.db  test.db  test_small.db
data/collector_lists/: ORBIC iNaturalist Collector Species Lists - vascular plants (2024 list).csv  ORBIC iNaturalist Collector Species Lists - vertebrates (2025 list).csv
data/experts/: Master_iNaturalist_US_Canada_Experts_20240327.csv
data/output/: full_observations.csv  identifications.csv  observations.csv
data/taxonomy/: .gitignore  elcode_tracking_a.csv  elcode_tracking_i.csv  elcode_tracking_k.csv  elcode_tracking_n.csv  elcode_tracking_p.csv
docs/: README.txt  fields.json  iNat-to-Obs.xlsx  inat_obs_schema.json  obscured_obs_response.json  observations_response.json  response.json  tracking_elcode_groups.csv
inatdatapipeline/: __main__.py  config.py  db_manager.py  helpers.py  inaturalist_auth.py  obs_fields.json  observations.py  project_members.py  taxa.py
inatdatapipeline.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
inputs/collector_lists/: elcodes.csv  (+1 more)
name_overrides/: overrides.py
output/: identifications.csv  observations.csv  users.csv
pipeline/: __main__.py  db_manager.py  helpers.py  inaturalist_auth.py  obs_fields.json  observations.py  taxa.py  test_taxa.py
src/inatdatapipeline/: __init__.py  (+11 more)
taxonomy/: all_tracked.csv  elcode_tracking_a.csv  elcode_tracking_i.csv  elcode_tracking_k.csv  elcode_tracking_n.csv  elcode_tracking_p.csv  name_overrides.csv
tests/: bad.csv  conftest.py  test.db  test2.db  test_db_manager.py  test_observations.py  test_pipeline.py  test_request.py  test_review.py  test_schemas.py  test_small.db  test_taxa.py
tools/: htmlscraper.py
(+25 files in other folders)
